feat: product view record
