# models/a_init.go
@@ -7,7 +7,7 @@ import (
 // models must be registered here to migrate into the database
 func init() {
 	fmt.Println("migrate database...")
-	err := DB.AutoMigrate(&Category{}, &Product{})
+	err := DB.AutoMigrate(&Category{}, &Product{}, &ProductRecord{})
 	if err != nil {
 		panic(err)
 	}
